@@ -37,6 +37,7 @@ Bugs fixed:
 - 1613925 Fixed memory loss in providerinfo cache
 - 1613933 Fixed embedded Objects in Indications do not work
 - 1613936 Fixed associator call fails when role parameters are set
+- 1614075 Fixed enabling slp can lead to a segfault
 
 Changes in 1.1.1
 ================
